--- a/client/src/styles/_timer.scss
+++ b/client/src/styles/_timer.scss
@@ -16,17 +16,26 @@
     #time-container {
         width: 32vw;
         height: 32vw;
-        border: 7px solid gray;
+        border: double 1px transparent;
+        border-radius: 100%;
+        background-image: linear-gradient(135deg, #241641, #191D21), radial-gradient(circle at top left, $primaryColor, $secondaryColor);
+        background-origin: border-box;
+        background-clip: padding-box, border-box;
     }
 
     #time-conteiner-compleated {
-        height: calc(32vw - 6px);
-        width: calc(32vw - 6px);
-        border: 1px solid white;
+        width: 32vw;
+        height: 32vw;
+        border: double 7px transparent;
+        
+        background-image: linear-gradient(135deg, #241641, #191D21), radial-gradient(circle at top left, $primaryColor, $secondaryColor);
+        background-origin: border-box;
+        background-clip: padding-box, border-box;
     }
 
     #time {
         font-size: 4rem;
+        z-index: 2;
     }
 
     button {
