--- a/client/src/styles/Styles.scss
+++ b/client/src/styles/Styles.scss
@@ -1,4 +1,4 @@
-@import 'variables', 'navbar', 'menu', 'timer';
+@import 'variables', 'navbar', 'menu', 'timer', 'profile';
 
 :root {
     color: white;
