cursor fix to navbar

--- a/client/src/styles/_navbar.scss
+++ b/client/src/styles/_navbar.scss
@@ -5,6 +5,11 @@
     display: flex;
     flex-direction: column;
 
+    div #logo, div .icon, div p {
+        user-select: none;
+        cursor: pointer;
+    }
+
     div {
         margin-bottom: 20px;
         height: fit-content;
