--- a/client/src/styles/_timer.scss
+++ b/client/src/styles/_timer.scss
@@ -49,8 +49,8 @@
     }
 
     #time-container {
-        width: 32vw;
-        height: 32vw;
+        width: 60vh;
+        height: 60vh;
         border: double 1px transparent;
         border-radius: 100%;
         background-image: linear-gradient(135deg, #241641, #191D21), radial-gradient(circle at top left, $primaryColor, $secondaryColor);
@@ -59,14 +59,25 @@
     }
 
     #time-conteiner-compleated {
-        width: 32vw;
-        height: 32vw;
-        border: double 7px transparent;
+        width: 60vh;
+        height: 60vh;
+        // border: double 7px transparent;
         
-        background-image: linear-gradient(135deg, #241641, #191D21), radial-gradient(circle at top left, $primaryColor, $secondaryColor);
-        background-origin: border-box;
-        background-clip: padding-box, border-box;
+        // background-image: linear-gradient(135deg, #241641, #191D21), radial-gradient(circle at top left, $primaryColor, $secondaryColor);
+        // background-origin: border-box;
+        // background-clip: padding-box, border-box;
+        border-radius:  50%;
+        background: conic-gradient(rgba(0, 0, 0, 0.2) 0deg, transparent calc(0deg + 0.5deg) 100%);
     }
+
+    // #arc {
+    //     height:84%;
+    //     width:84%;
+    //     top:8%;
+    //     left:8%;
+    //     position:relative;
+    //     border-radius:50%;
+    // }
 
     #time {
         @include center;
