--- a/client/src/styles/_timer.scss
+++ b/client/src/styles/_timer.scss
@@ -88,3 +88,17 @@
         color: white;
     }
 }
+
+#top-right {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 40px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    .icon {
+        fill: red;
+    }
+}
