finishing full-screen

--- a/client/src/styles/_timer.scss
+++ b/client/src/styles/_timer.scss
@@ -67,8 +67,8 @@
     }
 
     #time-conteiner-compleated {
-        width: 70vh;
-        height: 70vh;
+        width: 50vh;
+        height: 50vh;
     }
 
     #time {
@@ -110,6 +110,7 @@
     #timer {
         #time {
             font-size: 6rem;
+            margin-top: -20px;
         }
 
         #time-container {
@@ -118,8 +119,8 @@
         }
 
         #time-conteiner-compleated {
-            width: 100vh;
-            height: 100vh;
+            width: 73vh;
+            height: 73vh;
         }
     }
 
