--- a/client/src/styles/_settings.scss
+++ b/client/src/styles/_settings.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 #Settings {
     position: absolute;
     bottom: 0;
@@ -5,10 +7,12 @@
     display: flex;
     flex-direction: column;
     background-color: #343434ca;
+    padding: 40px;
 
     div .row, .row {
         display: flex;
         flex-direction: row;
+        gap: 40px;
 
         div {
             display: flex;
@@ -16,10 +20,54 @@
         }
     }
 
+    .title {
+        font-size: 3rem;
+        margin: 0 auto 20px auto;
+
+    }
+
     #last-row {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+    }
+
+    input {
+        padding: 5px;
+        background-color: rgba(0, 0, 0, 0);
+        border: 2px solid white;
+        border-radius: 2px;
+        color: white;
+        margin-bottom: 80px;
+        font-size: 0.8em;
+    }
+
+    input:focus {
+        outline: none !important;
+    }
+
+    label {
+        margin: 0 auto 15px auto;
+    }
+
+    .row {
+        justify-content: space-around;
+
+        #submit {
+            padding: 10px 20px;
+            border: 0;
+            background: linear-gradient(135deg, $primaryColor, $secondaryColor);
+            color: white;
+            font-size: 1em;
+            font-weight: 600;
+            border-radius: 5px;
+        }
+
+        #close {
+            height: 2em;
+            line-height: 2em;
+            text-align: center;
+        }
     }
 }
 
@@ -82,7 +130,7 @@ input:checked + .slider:before {
 .slider.round {
     border-radius: 34px;
 }
-  
+
 .slider.round:before {
     border-radius: 50%;
 }
