--- a/client/src/styles/_settings.scss
+++ b/client/src/styles/_settings.scss
@@ -10,6 +10,8 @@
     padding: 40px;
     border-radius: 20px 0 0 0;
     z-index: 2;
+    border-left: 1px solid white;
+    border-top: 1px solid white;
 
     div .row, .row {
         display: flex;
