navbar buttons to indicate current page

--- a/client/src/styles/_profile.scss
+++ b/client/src/styles/_profile.scss
@@ -59,3 +59,13 @@
         @include center;
     }
 }
+
+#profile .show-current {
+    position: absolute;
+    top: 172px;
+    left: 34px;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: linear-gradient(135deg, $primaryColor, $secondaryColor);
+}
