--- a/client/src/styles/_settings.scss
+++ b/client/src/styles/_settings.scss
@@ -57,6 +57,8 @@
         justify-content: space-around;
 
         #submit {
+            cursor: pointer;
+            user-select: none;
             padding: 10px 20px;
             border: 0;
             background: linear-gradient(135deg, $primaryColor, $secondaryColor);
@@ -67,6 +69,8 @@
         }
 
         #close {
+            user-select: none;
+            cursor: pointer;
             height: 2em;
             line-height: 2em;
             text-align: end;
