--- a/client/src/styles/Styles.scss
+++ b/client/src/styles/Styles.scss
@@ -19,7 +19,8 @@
     width: 100vw;
     height: 100vh;
     background: linear-gradient(135deg, $backgroundFirstColor, $backgroundSecondColor);
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 body {
